Homework has done

--- a/index.html
+++ b/index.html
@@ -17,5 +17,10 @@
             <button class="content__button">Поехали!</button>
         </div>
     </header>
+    <main class="main center">
+        <div class="main__game-card card-1">Игра 1</div>
+        <div class="main__game-card card-2">Игра 2</div>
+        <div class="main__game-card card-3">Игра 3</div>
+    </main>
 </body>
 </html>
