New section done

--- a/index.html
+++ b/index.html
@@ -22,6 +22,19 @@
         <div class="main__game-card card-2">Игра 2</div>
         <div class="main__game-card card-3">Игра 3</div>
     </main>
-    <script src="js/hw-4.js"></script>
+    <section class="game-times-of-year center">
+        <div class="game-times-of-year__content content">
+            <h2 class="content__title">Времена года!</h2>
+            <p class="content__text">
+                Нажмите кнопку играть, введите номер месяца (от 1 до 12) и вы узнаете к какому времени года он относится
+            </p>
+            <button class="content__button">Играть!</button>
+        </div>
+        <picture class="game-times-of-year__img">
+            <source srcset="img/game-2.png" media="(max-width: 767px)">
+            <img src="img/game-1.png" alt="Game">
+        </picture>
+    </section>
+    <script src="js/hw-5.js"></script>
 </body>
 </html>
