--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <p class="content__text">
                 Нажмите кнопку играть, введите номер месяца (от 1 до 12) и вы узнаете к какому времени года он относится
             </p>
-            <button class="content__button">Играть!</button>
+            <button class="content__button" onclick="playTimesOfYear();">Играть!</button>
         </div>
         <picture class="game-times-of-year__img">
             <source srcset="img/game-2.png" media="(max-width: 767px)">
