New file created

--- a/index.html
+++ b/index.html
@@ -36,5 +36,6 @@
         </picture>
     </section>
     <script src="js/hw-5.js"></script>
+    <script src="js/hw-6.js"></script>
 </body>
 </html>
