--- a/index.html
+++ b/index.html
@@ -35,6 +35,20 @@
             <img src="img/game-1.png" alt="Game">
         </picture>
     </section>
+    <section class="game-guess-words center">
+        <img src="img/game-guess-1.png" alt="Game" class="game-guess-words__img-desktop">
+        <div class="game-guess-words__content content">
+            <h2 class="content__title">Запомни слова</h2>
+            <p class="content__text">
+                При нажатии на кнопку играть, вы увидите несколько слов, которые вам необходимо запомнить.
+            </p>
+            <button class="content__button" onclick="playGuessWords();">Играть</button>
+        </div>
+        <picture class="game-guess-words__img">
+            <source srcset="img/game-guess-2.png" media="(max-width: 767px)">
+            <img src="img/game-guess-1.png" alt="Game">
+        </picture>
+    </section>
     <script src="js/hw-5.js"></script>
     <script src="js/hw-7.js"></script>
 </body>
