--- a/index.html
+++ b/index.html
@@ -51,5 +51,6 @@
     </section>
     <script src="js/hw-5.js"></script>
     <script src="js/hw-7.js"></script>
+    <script src="js/hw-8.js"></script>
 </body>
 </html>
